--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,11 @@
-<% provide(:title, 'Home') %>
-<h1>StaticPages#home</h1>
-<p>
-    This is the home page for the depot application.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to the depot</h1>
+
+  <h2>
+    This is the home page for the depot sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
